--- a/style.css
+++ b/style.css
@@ -248,5 +248,6 @@ body {
   outline: none;
 }
 .question-count-input:focus {
-  border-color: #ed86a5; 
+  border-color: #ed86a5;
+  box-shadow: none;
 }
